# pongAI_p3

./: CMakeLists.txt  README.md  compile_and_run.sh  main.cpp  main_demo  train_pong_agent  train_xor
benchmarks/: performance_tests.cpp
docs/: BIBLIOGRAFIA.md
examples/: train_pong_agent.cpp  train_xor.cpp
include/utec/agent/: PongAgent.h
include/utec/algebra/: tensor.h
include/utec/nn/: activation.h  dense.h  layer.h  loss.h  neural_network.h
src/utec/agent/: PongAgent.cpp
tests/: test_agent_env.cpp  test_neural_network.cpp  test_tensor.cpp
